Updated lists and am working on Lasso Cox PH.

--- a/enrichment_analysis/combined_ea.ipynb
+++ b/enrichment_analysis/combined_ea.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
+    "dset_idx <- 2\n",
     "# hub_con_thresh <- 0.5\n",
     "# hub_con_thresh <- 0.25\n",
     "hub_con_thresh <- 0.0"
@@ -229,12 +229,10 @@
    "source": [
     "matrisome_df <- load_matrisome_df(paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\"))\n",
     "gene2id_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/hugo2entrez.tsv\"))\n",
-    "# figo_genes <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_hub_thresh_\", hub_con_thresh, \"_gene_list.txt\"))\n",
     "deg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_deg_list.txt\"))\n",
     "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
     "nsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_nsmg_hub_thresh_\", hub_con_thresh, \"_demg_list.txt\"))\n",
-    "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))\n",
-    "# survival_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_demg_list.txt\"))"
+    "umsmg_demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_umsmg_demg_list.txt\"))"
    ]
   },
   {
@@ -467,100 +465,6 @@
     "    nsmg_demg_kegg_df,\n",
     "    paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_nsmg_demg_kegg.tsv\")\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Survival"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# survival_demg_df <- survival_demg_list %>%\n",
-    "#     as_tibble_col(column_name = \"geneID\") %>%\n",
-    "#     dplyr::inner_join(gene2id_df, c(\"geneID\" = \"hugo_symbol\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Gene-set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# survival_demg_go <- enrichGO(survival_demg_df$entrez_gene_id, \"org.Hs.eg.db\", ont = \"ALL\", readable = TRUE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# survival_demg_go_df <- make_ea_df(survival_demg_go, ea_type = \"GO\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pathway"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# survival_demg_kegg <- enrichKEGG(survival_demg_df$entrez_gene_id, organism = \"hsa\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# survival_demg_kegg_df <- make_ea_df(survival_demg_kegg, ea_type = \"KEGG\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Write out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# write_tsv(\n",
-    "#     survival_demg_go_df,\n",
-    "#     paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_go.tsv\")\n",
-    "# )\n",
-    "\n",
-    "# if (nrow(survival_demg_kegg_df) > 0) {\n",
-    "#     write_tsv(\n",
-    "#         survival_demg_kegg_df,\n",
-    "#         paste0(dirs$analysis_dir, \"/enrichment/\", unified_dsets[dset_idx], \"_survival_demg_kegg.tsv\")\n",
-    "#     )\n",
-    "# }\n"
    ]
   }
  ],
