--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "generous-developer",
+   "id": "hindu-express",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "functional-delay",
+   "id": "regulation-walker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "proof-consumer",
+   "id": "mounted-lover",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
-    "save_lists <- TRUE"
+    "dset_idx <- 2\n",
+    "save_lists <- FALSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "velvet-system",
+   "id": "formal-warrant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frank-coating",
+   "id": "flying-switch",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "protected-paintball",
+   "id": "japanese-portugal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "still-shore",
+   "id": "motivated-hollywood",
    "metadata": {},
    "source": [
     "# Data"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "hungarian-grove",
+   "id": "circular-lodge",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-mistake",
+   "id": "minor-directive",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floppy-salvation",
+   "id": "broad-title",
    "metadata": {},
    "source": [
     "## DEG"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "powered-testing",
+   "id": "chicken-valentine",
    "metadata": {},
    "outputs": [
     {
@@ -292,47 +292,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>8229</dd>\n",
+       "\t\t<dd>7646</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.406530975200079</dd>\n",
+       "\t\t<dd>0.377729473372196</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>4862</dd>\n",
+       "\t\t<dd>4682</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>3367</dd>\n",
+       "\t\t<dd>2964</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 8229\n",
-       "\\item[\\$deg\\_prop] 0.406530975200079\n",
-       "\\item[\\$n\\_up] 4862\n",
-       "\\item[\\$n\\_down] 3367\n",
+       "\\item[\\$n\\_deg] 7646\n",
+       "\\item[\\$deg\\_prop] 0.377729473372196\n",
+       "\\item[\\$n\\_up] 4682\n",
+       "\\item[\\$n\\_down] 2964\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   8229\n",
+       ":   7646\n",
        "$deg_prop\n",
-       ":   0.406530975200079\n",
+       ":   0.377729473372196\n",
        "$n_up\n",
-       ":   4862\n",
+       ":   4682\n",
        "$n_down\n",
-       ":   3367\n",
+       ":   2964\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 8229\n",
+       "[1] 7646\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.406531\n",
+       "[1] 0.3777295\n",
        "\n",
        "$n_up\n",
-       "[1] 4862\n",
+       "[1] 4682\n",
        "\n",
        "$n_down\n",
-       "[1] 3367\n"
+       "[1] 2964\n"
       ]
      },
      "metadata": {},
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "previous-delaware",
+   "id": "rotary-delhi",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "tough-church",
+   "id": "baking-pharmaceutical",
    "metadata": {},
    "outputs": [
     {
@@ -363,47 +363,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>618</dd>\n",
+       "\t\t<dd>595</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.613095238095238</dd>\n",
+       "\t\t<dd>0.590277777777778</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>317</dd>\n",
+       "\t\t<dd>363</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>301</dd>\n",
+       "\t\t<dd>232</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 618\n",
-       "\\item[\\$deg\\_prop] 0.613095238095238\n",
-       "\\item[\\$n\\_up] 317\n",
-       "\\item[\\$n\\_down] 301\n",
+       "\\item[\\$n\\_deg] 595\n",
+       "\\item[\\$deg\\_prop] 0.590277777777778\n",
+       "\\item[\\$n\\_up] 363\n",
+       "\\item[\\$n\\_down] 232\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   618\n",
+       ":   595\n",
        "$deg_prop\n",
-       ":   0.613095238095238\n",
+       ":   0.590277777777778\n",
        "$n_up\n",
-       ":   317\n",
+       ":   363\n",
        "$n_down\n",
-       ":   301\n",
+       ":   232\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 618\n",
+       "[1] 595\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.6130952\n",
+       "[1] 0.5902778\n",
        "\n",
        "$n_up\n",
-       "[1] 317\n",
+       "[1] 363\n",
        "\n",
        "$n_down\n",
-       "[1] 301\n"
+       "[1] 232\n"
       ]
      },
      "metadata": {},
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-texas",
+   "id": "subject-typing",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-aircraft",
+   "id": "later-compact",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -436,23 +436,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "based-experiment",
+   "id": "flexible-somewhere",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 16"
+       "<strong>$n_sig</strong> = 12"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 16"
+       "\\textbf{\\$n\\_sig} = 12"
       ],
       "text/markdown": [
-       "**$n_sig** = 16"
+       "**$n_sig** = 12"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 16\n"
+       "[1] 12\n"
       ]
      },
      "metadata": {},
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "textile-surprise",
+   "id": "heard-victor",
    "metadata": {},
    "source": [
     "## MI"
@@ -475,23 +475,23 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "alleged-rouge",
+   "id": "considered-hughes",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_mi</strong> = 52"
+       "<strong>$n_mi</strong> = 30"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_mi} = 52"
+       "\\textbf{\\$n\\_mi} = 30"
       ],
       "text/markdown": [
-       "**$n_mi** = 52"
+       "**$n_mi** = 30"
       ],
       "text/plain": [
        "$n_mi\n",
-       "[1] 52\n"
+       "[1] 30\n"
       ]
      },
      "metadata": {},
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-mountain",
+   "id": "recorded-accuracy",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "earlier-rotation",
+   "id": "prerequisite-thanksgiving",
    "metadata": {},
    "outputs": [
     {
@@ -522,47 +522,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$dataset</dt>\n",
-       "\t\t<dd>'unified_uterine_endometrial_data'</dd>\n",
+       "\t\t<dd>'unified_uterine_data'</dd>\n",
        "\t<dt>$naive</dt>\n",
-       "\t\t<dd>0.173809523809524</dd>\n",
+       "\t\t<dd>0.140625</dd>\n",
        "\t<dt>$mc</dt>\n",
-       "\t\t<dd>0.248283168400536</dd>\n",
+       "\t\t<dd>0.246008409683536</dd>\n",
        "\t<dt>$n_obs</dt>\n",
-       "\t\t<dd>137</dd>\n",
+       "\t\t<dd>46</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$dataset] 'unified\\_uterine\\_endometrial\\_data'\n",
-       "\\item[\\$naive] 0.173809523809524\n",
-       "\\item[\\$mc] 0.248283168400536\n",
-       "\\item[\\$n\\_obs] 137\n",
+       "\\item[\\$dataset] 'unified\\_uterine\\_data'\n",
+       "\\item[\\$naive] 0.140625\n",
+       "\\item[\\$mc] 0.246008409683536\n",
+       "\\item[\\$n\\_obs] 46\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$dataset\n",
-       ":   'unified_uterine_endometrial_data'\n",
+       ":   'unified_uterine_data'\n",
        "$naive\n",
-       ":   0.173809523809524\n",
+       ":   0.140625\n",
        "$mc\n",
-       ":   0.248283168400536\n",
+       ":   0.246008409683536\n",
        "$n_obs\n",
-       ":   137\n",
+       ":   46\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$dataset\n",
-       "[1] \"unified_uterine_endometrial_data\"\n",
+       "[1] \"unified_uterine_data\"\n",
        "\n",
        "$naive\n",
-       "[1] 0.1738095\n",
+       "[1] 0.140625\n",
        "\n",
        "$mc\n",
-       "[1] 0.2482832\n",
+       "[1] 0.2460084\n",
        "\n",
        "$n_obs\n",
-       "[1] 137\n"
+       "[1] 46\n"
       ]
      },
      "metadata": {},
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suffering-disability",
+   "id": "rocky-creator",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "mighty-senegal",
+   "id": "entire-community",
    "metadata": {},
    "outputs": [
     {
@@ -596,47 +596,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$avg_score</dt>\n",
-       "\t\t<dd>0.354026811258891</dd>\n",
+       "\t\t<dd>0.304563492063492</dd>\n",
        "\t<dt>$naive_pct_imp</dt>\n",
-       "\t\t<dd>103.686658532513</dd>\n",
+       "\t\t<dd>116.57848324515</dd>\n",
        "\t<dt>$mc_pct_imp</dt>\n",
-       "\t\t<dd>42.5899361360523</dd>\n",
+       "\t\t<dd>23.8020653258485</dd>\n",
        "\t<dt>$n_genes</dt>\n",
-       "\t\t<dd>76</dd>\n",
+       "\t\t<dd>28</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$avg\\_score] 0.354026811258891\n",
-       "\\item[\\$naive\\_pct\\_imp] 103.686658532513\n",
-       "\\item[\\$mc\\_pct\\_imp] 42.5899361360523\n",
-       "\\item[\\$n\\_genes] 76\n",
+       "\\item[\\$avg\\_score] 0.304563492063492\n",
+       "\\item[\\$naive\\_pct\\_imp] 116.57848324515\n",
+       "\\item[\\$mc\\_pct\\_imp] 23.8020653258485\n",
+       "\\item[\\$n\\_genes] 28\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$avg_score\n",
-       ":   0.354026811258891\n",
+       ":   0.304563492063492\n",
        "$naive_pct_imp\n",
-       ":   103.686658532513\n",
+       ":   116.57848324515\n",
        "$mc_pct_imp\n",
-       ":   42.5899361360523\n",
+       ":   23.8020653258485\n",
        "$n_genes\n",
-       ":   76\n",
+       ":   28\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$avg_score\n",
-       "[1] 0.3540268\n",
+       "[1] 0.3045635\n",
        "\n",
        "$naive_pct_imp\n",
-       "[1] 103.6867\n",
+       "[1] 116.5785\n",
        "\n",
        "$mc_pct_imp\n",
-       "[1] 42.58994\n",
+       "[1] 23.80207\n",
        "\n",
        "$n_genes\n",
-       "[1] 76\n"
+       "[1] 28\n"
       ]
      },
      "metadata": {},
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cross-liability",
+   "id": "boxed-coverage",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "failing-component",
+   "id": "checked-visiting",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "southern-serial",
+   "id": "contrary-preliminary",
    "metadata": {},
    "outputs": [
     {
@@ -690,20 +690,20 @@
        "\t<dt>$n_sig_modules</dt>\n",
        "\t\t<dd>3</dd>\n",
        "\t<dt>$n_sig_genes</dt>\n",
-       "\t\t<dd>71</dd>\n",
+       "\t\t<dd>175</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
        "\\item[\\$n\\_sig\\_modules] 3\n",
-       "\\item[\\$n\\_sig\\_genes] 71\n",
+       "\\item[\\$n\\_sig\\_genes] 175\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_sig_modules\n",
        ":   3\n",
        "$n_sig_genes\n",
-       ":   71\n",
+       ":   175\n",
        "\n",
        "\n"
       ],
@@ -712,7 +712,7 @@
        "[1] 3\n",
        "\n",
        "$n_sig_genes\n",
-       "[1] 71\n"
+       "[1] 175\n"
       ]
      },
      "metadata": {},
@@ -726,7 +726,66 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-treat",
+   "id": "unique-fever",
+   "metadata": {},
+   "source": [
+    "## TOM meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "respective-devon",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>0%</dt><dd>1.4</dd><dt>25%</dt><dd>2.4</dd><dt>50%</dt><dd>3.4</dd><dt>75%</dt><dd>5.3</dd><dt>100%</dt><dd>18.3</dd></dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[0\\textbackslash{}\\%] 1.4\n",
+       "\\item[25\\textbackslash{}\\%] 2.4\n",
+       "\\item[50\\textbackslash{}\\%] 3.4\n",
+       "\\item[75\\textbackslash{}\\%] 5.3\n",
+       "\\item[100\\textbackslash{}\\%] 18.3\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "0%\n",
+       ":   1.425%\n",
+       ":   2.450%\n",
+       ":   3.475%\n",
+       ":   5.3100%\n",
+       ":   18.3\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  0%  25%  50%  75% 100% \n",
+       " 1.4  2.4  3.4  5.3 18.3 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "colnames(tom) <- colnames(data_expr)\n",
+    "rownames(tom) <- colnames(data_expr)\n",
+    "rowSums(tom) %>%\n",
+    "    quantile() %>%\n",
+    "    round(digits = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "consecutive-brazilian",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -734,8 +793,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "purple-barcelona",
+   "execution_count": 16,
+   "id": "danish-network",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,23 +813,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "otherwise-calibration",
+   "execution_count": 17,
+   "id": "afraid-brain",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "8229"
+       "7646"
       ],
       "text/latex": [
-       "8229"
+       "7646"
       ],
       "text/markdown": [
-       "8229"
+       "7646"
       ],
       "text/plain": [
-       "[1] 8229"
+       "[1] 7646"
       ]
      },
      "metadata": {},
@@ -779,16 +838,16 @@
     {
      "data": {
       "text/html": [
-       "618"
+       "595"
       ],
       "text/latex": [
-       "618"
+       "595"
       ],
       "text/markdown": [
-       "618"
+       "595"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 595"
       ]
      },
      "metadata": {},
@@ -797,16 +856,16 @@
     {
      "data": {
       "text/html": [
-       "135"
+       "65"
       ],
       "text/latex": [
-       "135"
+       "65"
       ],
       "text/markdown": [
-       "135"
+       "65"
       ],
       "text/plain": [
-       "[1] 135"
+       "[1] 65"
       ]
      },
      "metadata": {},
@@ -815,16 +874,16 @@
     {
      "data": {
       "text/html": [
-       "71"
+       "175"
       ],
       "text/latex": [
-       "71"
+       "175"
       ],
       "text/markdown": [
-       "71"
+       "175"
       ],
       "text/plain": [
-       "[1] 71"
+       "[1] 175"
       ]
      },
      "metadata": {},
@@ -833,16 +892,16 @@
     {
      "data": {
       "text/html": [
-       "82"
+       "37"
       ],
       "text/latex": [
-       "82"
+       "37"
       ],
       "text/markdown": [
-       "82"
+       "37"
       ],
       "text/plain": [
-       "[1] 82"
+       "[1] 37"
       ]
      },
      "metadata": {},
@@ -851,16 +910,16 @@
     {
      "data": {
       "text/html": [
-       "44"
+       "106"
       ],
       "text/latex": [
-       "44"
+       "106"
       ],
       "text/markdown": [
-       "44"
+       "106"
       ],
       "text/plain": [
-       "[1] 44"
+       "[1] 106"
       ]
      },
      "metadata": {},
@@ -869,16 +928,16 @@
     {
      "data": {
       "text/html": [
-       "7"
+       "9"
       ],
       "text/latex": [
-       "7"
+       "9"
       ],
       "text/markdown": [
-       "7"
+       "9"
       ],
       "text/plain": [
-       "[1] 7"
+       "[1] 9"
       ]
      },
      "metadata": {},
@@ -897,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upper-closure",
+   "id": "attached-banana",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -905,8 +964,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "adaptive-landing",
+   "execution_count": 18,
+   "id": "viral-fortune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "olympic-projector",
+   "id": "going-spirit",
    "metadata": {},
    "outputs": [],
    "source": []
